--- a/3DRenderingTechniqueAnalysis/RayTracing/RayTracing.vcxproj
+++ b/3DRenderingTechniqueAnalysis/RayTracing/RayTracing.vcxproj
@@ -18,6 +18,15 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <CudaCompile Include="src\RayTracing.cu" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\WorldDatatypes.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="textureAtlas.png" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{7F5852BC-BE73-4927-AEFA-4BD024897E5F}</ProjectGuid>
