--- a/3DRenderingTechniqueAnalysis/RayTracing/RayTracing.vcxproj.filters
+++ b/3DRenderingTechniqueAnalysis/RayTracing/RayTracing.vcxproj.filters
@@ -14,4 +14,17 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <CudaCompile Include="src\RayTracing.cu" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\WorldDatatypes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="textureAtlas.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
