Start of textured spheres

--- a/3DRenderingTechniqueAnalysis/RayTracing/RayTracing.vcxproj
+++ b/3DRenderingTechniqueAnalysis/RayTracing/RayTracing.vcxproj
@@ -22,6 +22,7 @@
     <CudaCompile Include="src\RayTracing.cu" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Controlls.h" />
     <ClInclude Include="src\WorldDatatypes.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
