--- a/3DRenderingTechniqueAnalysis/RayTracing/RayTracing.vcxproj.filters
+++ b/3DRenderingTechniqueAnalysis/RayTracing/RayTracing.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClInclude Include="src\WorldDatatypes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Controlls.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
