--- a/3DRenderingTechniqueAnalysis/RayTracing/RayTracing.vcxproj.filters
+++ b/3DRenderingTechniqueAnalysis/RayTracing/RayTracing.vcxproj.filters
@@ -16,6 +16,9 @@
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="src\RayTracing.cu" />
+    <CudaCompile Include="src\Sphere.cu" />
+    <CudaCompile Include="src\Triangle.cu" />
+    <CudaCompile Include="src\Shape.cu" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\WorldDatatypes.h">
