--- a/3DRenderingTechniqueAnalysis/Rasterization/Rasterization.vcxproj
+++ b/3DRenderingTechniqueAnalysis/Rasterization/Rasterization.vcxproj
@@ -145,6 +145,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Rasterization.cpp" />
+    <ClInclude Include="src\WorldDatatypes.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
